objects/ssot__PriceBookEntry__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Price Book Entry Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsArchived__c</fullName>
        <label>Is Archived</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeleted__c</fullName>
        <label>Is Deleted</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LowestUnitPriceAmount__c</fullName>
        <label>Lowest Unit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PricebookId__c</fullName>
        <label>Price Book</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StandardPriceAmount__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UnitListPriceAmount__c</fullName>
        <label>Unit List Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UseStandardPrice__c</fullName>
        <label>Use Standard Price</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009460181_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PriceBookEntry_CreatedById_map_User__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>PriceBookEntry_CreatedById_map_User__rel</relationshipLabel>
        <relationshipName>rel_1702009460181_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009460702_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PriceBookEntry_PricebookId_map_Price_rel</label>
        <referenceTo>ssot__PriceBook__dlm</referenceTo>
        <relationshipLabel>PriceBookEntry_PricebookId_map_Price_rel</relationshipLabel>
        <relationshipName>rel_1702009460702_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009460954_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PriceBookEntry_LastModifiedById_map__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>PriceBookEntry_LastModifiedById_map__rel</relationshipLabel>
        <relationshipName>rel_1702009460954_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>